# rusty-blog

./: Cargo.toml  README.md
md/: 27082022.md  template-post.md
md/wow/ooo/: eee.md
src/: main.rs
src/md/: test.md
static/css/: style.css
static/templates/: blogpost.html  index.html
