[package]
name = "templating-handlebars"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
actix-web = "4"
handlebars = { version = "4.2.1", features = ["dir_source"] }
serde_json = "1.0"
walkdir = "2.3.2"
actix-files="0.6.2"
chrono = "0.4.22"
time = { version = "0.3", features = ["macros"] }